--- a/DL_algos/fsrcnn.ipynb
+++ b/DL_algos/fsrcnn.ipynb
@@ -11,30 +11,24 @@
     }
    },
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "from PIL import Image\n",
+    "from torch.utils.data import Dataset\n",
     "import os\n",
     "import glob\n",
-    "import random\n",
-    "import rasterio\n",
-    "import numpy as np\n",
     "import classic_algos.bicubic_interpolation as bicubic\n",
     "import classic_algos.lanczos as lanczos\n",
-    "from skimage.color import rgb2ycbcr\n",
-    "\n",
-    "\n",
     "import torch.optim as optim\n",
     "from torch.utils.data import DataLoader\n",
     "from tqdm import tqdm\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import math\n",
+    "import rasterio\n",
+    "import random\n",
     "from pathlib import Path\n",
-    "\n",
-    "# Настройки воспроизводимости и ускорения как в статье\n",
     "import torch.backends.cudnn as cudnn\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from skimage.color import rgb2ycbcr\n",
+    "\n",
     "random.seed(0)\n",
     "np.random.seed(0)\n",
     "torch.manual_seed(0)\n",
@@ -88,10 +82,9 @@
    "cell_type": "code",
    "source": [
     "class SatelliteSRDataset_Y(Dataset):\n",
-    "    def __init__(self, root_dir, scale_factor=2, hr_patch_size=40, augment=True):\n",
+    "    def __init__(self, root_dir, hr_patch_size=64, augment=True):\n",
     "        super().__init__()\n",
     "        self.root_dir = root_dir\n",
-    "        self.scale_factor = scale_factor\n",
     "        self.hr_patch_size = hr_patch_size\n",
     "        self.augment = augment\n",
     "        self.file_paths = glob.glob(os.path.join(root_dir, '**', '*.tif'), recursive=True)\n",
@@ -127,7 +120,7 @@
     "        hr_tensor = torch.from_numpy(hr_patch_np).float()\n",
     "\n",
     "        hr_patch_hwc = np.transpose(hr_patch_np, (1, 2, 0))\n",
-    "        lr_size = self.hr_patch_size // self.scale_factor\n",
+    "        lr_size = self.hr_patch_size // 2\n",
     "        lr_numpy_hwc = bicubic.SR_bicubic(hr_patch_hwc, lr_size, lr_size, preserve_range=True, output_dtype=np.float32)\n",
     "\n",
     "        if lr_numpy_hwc.ndim == 2:\n",
@@ -139,7 +132,7 @@
     "        return lr_tensor, hr_tensor\n",
     "\n",
     "class FSRCNN_Y(nn.Module):\n",
-    "    def __init__(self, scale_factor: int = 2):\n",
+    "    def __init__(self, scale_factor = 2):\n",
     "        d, s, m = 56, 12, 4\n",
     "        channels = 1\n",
     "        super(FSRCNN_Y, self).__init__()\n",
@@ -167,15 +160,7 @@
     "        x = self.expand(x)\n",
     "        x = self.deconv(x)\n",
     "        return torch.clamp(x, 0.0, 1.0)\n",
-    "\n",
-    "    def _initialize_weights(self):\n",
-    "        for m in self.modules():\n",
-    "            if isinstance(m, nn.Conv2d):\n",
-    "                nn.init.normal_(m.weight.data, mean=0.0, std=math.sqrt(2 / (m.out_channels * m.weight.data[0][0].numel())))\n",
-    "                nn.init.zeros_(m.bias.data)\n",
-    "\n",
-    "        nn.init.normal_(self.deconv.weight.data, mean=0.0, std=0.001)\n",
-    "        nn.init.zeros_(self.deconv.bias.data)\n"
+    "\n"
    ],
    "id": "8c20c60b13d4fdab",
    "outputs": [],
@@ -191,14 +176,14 @@
    "cell_type": "code",
    "source": [
     "\n",
-    "y_train_dataset = SatelliteSRDataset_Y(TRAIN_DIR, scale_factor=2, hr_patch_size=64, augment=True)\n",
-    "y_val_dataset = SatelliteSRDataset_Y(VAL_DIR, scale_factor=2, hr_patch_size=64, augment=False)\n",
-    "y_train_loader = DataLoader(y_train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=4, pin_memory=True)\n",
-    "y_val_loader = DataLoader(y_val_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=4, pin_memory=True)\n",
+    "train_dataset = SatelliteSRDataset_Y(TRAIN_DIR, augment=True)\n",
+    "val_dataset = SatelliteSRDataset_Y(VAL_DIR, augment=False)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=4, pin_memory=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=4, pin_memory=True)\n",
     "\n",
-    "y_model = FSRCNN_Y(scale_factor=2).to(device)\n",
-    "y_criterion = nn.MSELoss()\n",
-    "y_optimizer = optim.SGD(y_model.parameters(), lr=1e-3, momentum=0.9, weight_decay=1e-4, nesterov=False)"
+    "model = FSRCNN_Y(scale_factor=2).to(device)\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.SGD(model.parameters(), lr=1e-3, momentum=0.9, weight_decay=1e-4, nesterov=False)"
    ],
    "id": "87fadca667d5360e",
    "outputs": [],
@@ -208,38 +193,38 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "y_loss = []\n",
-    "y_psnr_metric = []\n",
+    "loss = []\n",
+    "psnr_metric = []\n",
     "\n",
     "for epoch in range(EPOCHS):\n",
-    "    y_model.train()\n",
+    "    model.train()\n",
     "    epoch_loss = 0\n",
-    "    for lr_imgs, hr_imgs in tqdm(y_train_loader, desc=f\"Epoch {epoch} (Y)\"):\n",
+    "    for lr_imgs, hr_imgs in tqdm(train_loader, desc=f\"Epoch {epoch}\"):\n",
     "        lr_imgs, hr_imgs = lr_imgs.to(device, non_blocking=True), hr_imgs.to(device, non_blocking=True)\n",
-    "        y_optimizer.zero_grad()\n",
-    "        sr_imgs = y_model(lr_imgs)\n",
-    "        batch_loss = y_criterion(sr_imgs, hr_imgs)\n",
+    "        optimizer.zero_grad()\n",
+    "        sr_imgs = model(lr_imgs)\n",
+    "        batch_loss = criterion(sr_imgs, hr_imgs)\n",
     "        batch_loss.backward()\n",
-    "        y_optimizer.step()\n",
+    "        optimizer.step()\n",
     "        epoch_loss += batch_loss.item()\n",
     "\n",
-    "    avg_loss = epoch_loss / len(y_train_loader)\n",
-    "    y_loss.append(avg_loss)\n",
+    "    avg_loss = epoch_loss / len(train_loader)\n",
+    "    loss.append(avg_loss)\n",
     "\n",
     "    if epoch % 5 == 0:\n",
-    "        y_model.eval()\n",
+    "        model.eval()\n",
     "        epoch_psnr = 0\n",
     "        with torch.no_grad():\n",
-    "            for lr_imgs, hr_imgs in y_val_loader:\n",
+    "            for lr_imgs, hr_imgs in val_loader:\n",
     "                lr_imgs, hr_imgs = lr_imgs.to(device, non_blocking=True), hr_imgs.to(device, non_blocking=True)\n",
-    "                sr_imgs = y_model(lr_imgs)\n",
+    "                sr_imgs = model(lr_imgs)\n",
     "                epoch_psnr += PSNR(sr_imgs, hr_imgs).item()\n",
-    "        avg_psnr = epoch_psnr / len(y_val_loader)\n",
-    "        y_psnr_metric.append(avg_psnr)\n",
-    "        print(f\"Epoch {epoch} (Y), Loss: {avg_loss:.4f}, PSNR: {avg_psnr:.2f} dB\")\n",
-    "        torch.save(y_model.state_dict(), MODEL_DIR / f'fsrcnn_y_paper_mse_epoch_{epoch}.pth')\n",
+    "        avg_psnr = epoch_psnr / len(val_loader)\n",
+    "        psnr_metric.append(avg_psnr)\n",
+    "        print(f\"Epoch {epoch}, Loss: {avg_loss:.4f}, PSNR: {avg_psnr:.2f} dB\")\n",
+    "        torch.save(model.state_dict(), MODEL_DIR / f'y_fsrcnn_epoch_{epoch}.pth')\n",
     "\n",
-    "print(\"Y-channel training complete.\")\n"
+    "print(\"training complete.\")\n"
    ],
    "id": "7862c594919ecb7a",
    "outputs": [],
@@ -254,19 +239,18 @@
    },
    "cell_type": "code",
    "source": [
-    "# 5. Визуализация результатов для Y-версии\n",
-    "plt.figure(figsize=(12, 5))\n",
-    "plt.suptitle(\"Результаты для Y-канала\")\n",
+    "plt.figure()\n",
+    "plt.suptitle(\"Результаты\")\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
-    "plt.plot(y_loss, label='Train Loss (L1)')\n",
+    "plt.plot(loss, label='Train Loss')\n",
     "plt.xlabel('Epochs')\n",
     "plt.ylabel('Loss')\n",
     "plt.legend()\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
-    "plt.plot(y_psnr_metric, label='Val PSNR (FSRCNN)', color='green')\n",
-    "plt.title('Метрика качества (PSNR) на Y-канале')\n",
+    "plt.plot(psnr_metric, label='Val PSNR')\n",
+    "plt.title('PSNR')\n",
     "plt.xlabel('Epochs (x5)')\n",
     "plt.ylabel('dB')\n",
     "plt.legend()\n",
@@ -301,130 +285,108 @@
    },
    "cell_type": "code",
    "source": [
-    "# Настройки визуализации\n",
-    "ZOOM_PATCH_SIZE = 128  # размер квадрата для зума на HR масштабе\n",
-    "ZOOM_TOP_LEFT = None   # (top, left) если None, выберется центр кадра\n",
-    "SCALE_Y = 2            # масштаб для Y-модели\n",
+    "ZOOM_PATCH_SIZE = 144\n",
+    "SCALE_Y = 2\n",
+    "MODEL_ARCH = FSRCNN_Y\n",
+    "MODEL_PATH = Path.home() / '.data' / 'y_fsrcnn_best_model.pth'\n",
+    "RANDOM_CROP = False\n",
     "\n",
-    "# 1) Выбор исходного файла из валид. набора и загрузка полного изображения\n",
-    "full_idx = random.randint(0, len(y_val_dataset.file_paths) - 1)\n",
-    "img_path = y_val_dataset.file_paths[full_idx]\n",
+    "full_idx = random.randint(0, len(val_dataset.file_paths) - 1)\n",
+    "img_path = val_dataset.file_paths[full_idx]\n",
+    "print(f\"File: {img_path}\")\n",
+    "\n",
     "with rasterio.open(img_path) as src:\n",
-    "    image = src.read()  # C x H x W, ожидаем RGB\n",
+    "    image_rgb_chw = src.read()\n",
     "\n",
-    "# Перевод в HWC и Y-канал\n",
-    "image_hwc = np.transpose(image, (1, 2, 0)).astype(np.uint8)\n",
-    "image_y = rgb2ycbcr(image_hwc)[:, :, 0].astype(np.float32) / 255.0  # [0,1]\n",
+    "image_rgb_hwc = np.transpose(image_rgb_chw, (1, 2, 0)).astype(np.uint8)\n",
+    "image_y = rgb2ycbcr(image_rgb_hwc)[:, :, 0]\n",
+    "image_y = image_y.astype(np.float32) / 255.0\n",
     "\n",
-    "# Приведение к кратности масштаба (обрезка, чтобы H,W делились на SCALE_Y)\n",
     "H, W = image_y.shape\n",
-    "H_adj = H - (H % SCALE_Y)\n",
-    "W_adj = W - (W % SCALE_Y)\n",
-    "image_y = image_y[:H_adj, :W_adj]\n",
+    "H = H - (H % SCALE_Y)\n",
+    "W = W - (W % SCALE_Y)\n",
+    "image_y = image_y[:H, :W]\n",
     "\n",
-    "# Формирование LR через бикубик, затем получение SR\n",
-    "lr_h = H_adj // SCALE_Y\n",
-    "lr_w = W_adj // SCALE_Y\n",
+    "lr_h = H // SCALE_Y\n",
+    "lr_w = W // SCALE_Y\n",
     "\n",
-    "# bicubic downscale до LR\n",
-    "lr_y_hwc = bicubic.SR_bicubic(image_y[:, :, np.newaxis], lr_h, lr_w,\n",
+    "image_y_hwc = image_y[:, :, np.newaxis]\n",
+    "lr_y_hwc = bicubic.SR_bicubic(image_y_hwc, lr_w, lr_h,\n",
     "                              preserve_range=True, output_dtype=np.float32)\n",
-    "# защита на случай 2D\n",
-    "if lr_y_hwc.ndim == 2:\n",
-    "    lr_y_hwc = lr_y_hwc[:, :, np.newaxis]\n",
     "\n",
-    "# CHW тензор для модели\n",
-    "lr_y_chw = np.transpose(lr_y_hwc, (2, 0, 1))  # (1, lr_h, lr_w)\n",
-    "lr_tensor_full = torch.from_numpy(lr_y_chw).unsqueeze(0).to(device)  # (1,1,lr_h,lr_w)\n",
+    "lr_y_chw = np.transpose(lr_y_hwc, (2, 0, 1))\n",
+    "lr_tensor = torch.from_numpy(lr_y_chw).unsqueeze(0).float().to(device)\n",
     "\n",
-    "# 2) Инференс FSRCNN-Y\n",
-    "model_y_compare = FSRCNN_Y(scale_factor=SCALE_Y).to(device)\n",
-    "# Если есть последняя сохраненная, попробуем ее загрузить; иначе оставим случайные веса\n",
-    "latest_ckpt = None\n",
+    "model_vis = MODEL_ARCH().to(device)\n",
+    "\n",
     "try:\n",
-    "    ckpts = sorted([p for p in MODEL_DIR.glob('fsrcnn_y_epoch_*.pth')], key=lambda x: x.stat().st_mtime, reverse=True)\n",
-    "    if ckpts:\n",
-    "        latest_ckpt = ckpts[0]\n",
-    "        print(latest_ckpt)\n",
-    "        model_y_compare.load_state_dict(torch.load(latest_ckpt, map_location=device))\n",
-    "        model_y_compare.eval()\n",
-    "except Exception:\n",
-    "    model_y_compare.eval()\n",
+    "    weights = torch.load(MODEL_PATH, map_location=device)\n",
+    "    model_vis.load_state_dict(weights)\n",
+    "    model_vis.eval()\n",
+    "except Exception as e:\n",
+    "    print(f\"ERROR loading model: {e}\")\n",
     "\n",
     "with torch.no_grad():\n",
-    "    sr_fsrcnn_full = model_y_compare(lr_tensor_full)  # (1,1,H_adj,W_adj)\n",
+    "    sr_model_tensor = model_vis(lr_tensor)\n",
     "\n",
-    "# 3) Бикубик и Ланцош до HR размера\n",
-    "sr_bicubic_full_hwc = bicubic.SR_bicubic(lr_y_hwc, H_adj, W_adj,\n",
-    "                                         preserve_range=True, output_dtype=np.float32)\n",
-    "if sr_bicubic_full_hwc.ndim == 2:\n",
-    "    sr_bicubic_full_hwc = sr_bicubic_full_hwc[:, :, np.newaxis]\n",
-    "sr_bicubic_full_chw = np.transpose(sr_bicubic_full_hwc, (2, 0, 1))\n",
-    "sr_bicubic_full = torch.from_numpy(sr_bicubic_full_chw).unsqueeze(0).to(device)\n",
+    "sr_bicubic_hwc = bicubic.SR_bicubic(lr_y_hwc, H, W,\n",
+    "                                    preserve_range=True, output_dtype=np.float32)\n",
+    "sr_lanczos_hwc = lanczos.SR_lanczos(lr_y_hwc, H, W,\n",
+    "                                    preserve_range=True, output_dtype=np.float32)\n",
     "\n",
-    "sr_lanczos_full_hwc = lanczos.resize_lanczos_vectorized(lr_y_hwc, H_adj, W_adj,\n",
-    "                                                        output_dtype=np.float32, preserve_range=True)\n",
-    "if sr_lanczos_full_hwc.ndim == 2:\n",
-    "    sr_lanczos_full_hwc = sr_lanczos_full_hwc[:, :, np.newaxis]\n",
-    "sr_lanczos_full_chw = np.transpose(sr_lanczos_full_hwc, (2, 0, 1))\n",
-    "sr_lanczos_full = torch.from_numpy(sr_lanczos_full_chw).unsqueeze(0).to(device)\n",
+    "sr_bicubic_tensor = torch.from_numpy(np.transpose(sr_bicubic_hwc, (2, 0, 1))).unsqueeze(0).to(device)\n",
+    "sr_lanczos_tensor = torch.from_numpy(np.transpose(sr_lanczos_hwc, (2, 0, 1))).unsqueeze(0).to(device)\n",
+    "hr_tensor = torch.from_numpy(image_y).unsqueeze(0).unsqueeze(0).to(device)\n",
     "\n",
-    "# GT HR как тензор\n",
-    "hr_full = torch.from_numpy(image_y[np.newaxis, np.newaxis, :, :].astype(np.float32)).to(device)\n",
+    "psnr_model = PSNR(sr_model_tensor, hr_tensor).item()\n",
+    "psnr_bicubic = PSNR(sr_bicubic_tensor, hr_tensor).item()\n",
+    "psnr_lanczos = PSNR(sr_lanczos_tensor, hr_tensor).item()\n",
     "\n",
-    "# 4) PSNR на полном кадре\n",
-    "psnr_fsrcnn_full = PSNR(sr_fsrcnn_full, hr_full).item()\n",
-    "psnr_bicubic_full = PSNR(sr_bicubic_full, hr_full).item()\n",
-    "psnr_lanczos_full = PSNR(sr_lanczos_full, hr_full).item()\n",
-    "\n",
-    "# 5) Подготовка зум-области\n",
-    "if ZOOM_TOP_LEFT is None:\n",
-    "    top = max((H_adj - ZOOM_PATCH_SIZE) // 2, 0)\n",
-    "    left = max((W_adj - ZOOM_PATCH_SIZE) // 2, 0)\n",
+    "if RANDOM_CROP:\n",
+    "    top = random.randint(0, H - ZOOM_PATCH_SIZE)\n",
+    "    left = random.randint(0, W - ZOOM_PATCH_SIZE)\n",
     "else:\n",
-    "    # Безопасная распаковка: ожидаем (top, left)\n",
-    "    if isinstance(ZOOM_TOP_LEFT, (tuple, list)) and len(ZOOM_TOP_LEFT) == 2:\n",
-    "        top, left = int(ZOOM_TOP_LEFT[0]), int(ZOOM_TOP_LEFT[1])\n",
-    "    else:\n",
-    "        # Если формат неверный — используем центр\n",
-    "        top = max((H_adj - ZOOM_PATCH_SIZE) // 2, 0)\n",
-    "        left = max((W_adj - ZOOM_PATCH_SIZE) // 2, 0)\n",
-    "    top = min(max(0, top), H_adj - ZOOM_PATCH_SIZE)\n",
-    "    left = min(max(0, left), W_adj - ZOOM_PATCH_SIZE)\n",
+    "    top = max((H - ZOOM_PATCH_SIZE) // 2, 0)\n",
+    "    left = max((W - ZOOM_PATCH_SIZE) // 2, 0)\n",
     "\n",
-    "def crop(tensor_b1c1hw):\n",
-    "    # tensor shape: (1,1,H,W)\n",
-    "    return tensor_b1c1hw[:, :, top:top+ZOOM_PATCH_SIZE, left:left+ZOOM_PATCH_SIZE]\n",
+    "def get_crops(tensor_img):\n",
+    "    full = tensor_img.squeeze().detach().cpu().numpy()\n",
+    "    crop = full[top:top+ZOOM_PATCH_SIZE, left:left+ZOOM_PATCH_SIZE]\n",
+    "    return full, crop\n",
     "\n",
-    "hr_zoom = crop(hr_full)\n",
-    "sr_fsrcnn_zoom = crop(sr_fsrcnn_full)\n",
-    "sr_bicubic_zoom = crop(sr_bicubic_full)\n",
-    "sr_lanczos_zoom = crop(sr_lanczos_full)\n",
+    "hr_full, hr_crop = get_crops(hr_tensor)\n",
+    "sr_full, sr_crop = get_crops(sr_model_tensor)\n",
+    "bi_full, bi_crop = get_crops(sr_bicubic_tensor)\n",
+    "la_full, la_crop = get_crops(sr_lanczos_tensor)\n",
     "\n",
-    "# 6) Визуализация: полноразмерный + зум\n",
-    "fig, axes = plt.subplots(2, 4, figsize=(22, 10))\n",
-    "fig.suptitle(f'Полный кадр и крупный зум (Y-канал)\\nФайл: {Path(img_path).name}\\nPSNR (full) — FSRCNN: {psnr_fsrcnn_full:.2f} | Bicubic: {psnr_bicubic_full:.2f} | Lanczos: {psnr_lanczos_full:.2f}', fontsize=14)\n",
+    "fig, axes = plt.subplots(2, 4)\n",
+    "model_name = \"Y FSRCNN\"\n",
     "\n",
-    "labels = ['HR', 'FSRCNN', 'Bicubic', 'Lanczos']\n",
-    "rows = [(hr_full, 'Full HR'), (sr_fsrcnn_full, 'Full FSRCNN'), (sr_bicubic_full, 'Full Bicubic'), (sr_lanczos_full, 'Full Lanczos')]\n",
-    "for j, (tensor, title) in enumerate(rows):\n",
-    "    img = tensor.squeeze().detach().cpu().numpy()\n",
-    "    axes[0, j].imshow(img, cmap='gray', vmin=0, vmax=1)\n",
-    "    axes[0, j].axis('off')\n",
-    "    axes[0, j].set_title(title)\n",
+    "fig.suptitle(f'Y SR: {Path(img_path).name}\\nPSNR (full) — {model_name}: {psnr_model:.2f} | Bicubic: {psnr_bicubic:.2f} | Lanczos: {psnr_lanczos:.2f}')\n",
     "\n",
-    "rows_zoom = [(hr_zoom, 'Zoom HR'), (sr_fsrcnn_zoom, f'Zoom FSRCNN'), (sr_bicubic_zoom, 'Zoom Bicubic'), (sr_lanczos_zoom, 'Zoom Lanczos')]\n",
-    "for j, (tensor, title) in enumerate(rows_zoom):\n",
-    "    img = tensor.squeeze().detach().cpu().numpy()\n",
-    "    axes[1, j].imshow(img, cmap='gray', vmin=0, vmax=1)\n",
-    "    axes[1, j].axis('off')\n",
-    "    axes[1, j].set_title(title)\n",
+    "imgs_full = [hr_full, sr_full, bi_full, la_full]\n",
+    "titles = ['Original HR', f'{model_name} (Ours)', 'Bicubic', 'Lanczos']\n",
     "\n",
-    "plt.tight_layout(rect=(0, 0.03, 1, 0.95))\n",
+    "for ax, img, title in zip(axes[0], imgs_full, titles):\n",
+    "    ax.imshow(np.clip(img, 0, 1), cmap='gray')\n",
+    "    ax.axis('off')\n",
+    "    ax.set_title(title)\n",
+    "\n",
+    "imgs_crop = [hr_crop, sr_crop, bi_crop, la_crop]\n",
+    "titles_zoom = ['Zoom HR', f'Zoom {model_name}', 'Zoom Bicubic', 'Zoom Lanczos']\n",
+    "\n",
+    "for ax, img, title in zip(axes[1], imgs_crop, titles_zoom):\n",
+    "    ax.imshow(np.clip(img, 0, 1), cmap='gray')\n",
+    "    ax.axis('off')\n",
+    "    ax.set_title(title)\n",
+    "\n",
+    "rect = plt.Rectangle((left, top), ZOOM_PATCH_SIZE, ZOOM_PATCH_SIZE, linewidth=2, edgecolor='r', facecolor='none')\n",
+    "axes[0, 0].add_patch(rect)\n",
+    "\n",
+    "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "print(f\"Full-image PSNR — FSRCNN: {psnr_fsrcnn_full:.2f} dB | Bicubic: {psnr_bicubic_full:.2f} dB | Lanczos: {psnr_lanczos_full:.2f} dB\")\n",
-    "print(f\"Zoom region: top={top}, left={left}, size={ZOOM_PATCH_SIZE}x{ZOOM_PATCH_SIZE}\")\n"
+    "print(f\"Zoom Area: Top={top}, Left={left}, Size={ZOOM_PATCH_SIZE}\")"
    ],
    "id": "38b019fb6f7117f1",
    "outputs": [
