--- a/DL_algos/rgb_ressr.ipynb
+++ b/DL_algos/rgb_ressr.ipynb
@@ -299,9 +299,6 @@
     "ZOOM_PATCH_SIZE = 144\n",
     "SCALE_Y = 2\n",
     "MODEL_ARCH = ResSR\n",
-    "N_CHANNELS = 3\n",
-    "N_RES_BLOCKS = 16\n",
-    "N_FEATS = 64\n",
     "MODEL_PATH = Path.home() / '.data' / 'rgb_ressr_best_model.pth'\n",
     "RANDOM_CROP = False\n",
     "\n",
@@ -328,8 +325,7 @@
     "lr_rgb_chw = np.transpose(lr_rgb_hwc, (2, 0, 1))\n",
     "lr_tensor = torch.from_numpy(lr_rgb_chw).unsqueeze(0).float().to(device) # (1, C, H, W)\n",
     "\n",
-    "model_vis = MODEL_ARCH(num_channels=N_CHANNELS,\n",
-    "                       num_res_blocks=N_RES_BLOCKS, n_feats=N_FEATS).to(device)\n",
+    "model_vis = MODEL_ARCH().to(device)\n",
     "\n",
     "try:\n",
     "    weights = torch.load(MODEL_PATH, map_location=device)\n",
