--- a/DL_algos/y_rcan.ipynb
+++ b/DL_algos/y_rcan.ipynb
@@ -334,9 +334,6 @@
     "ZOOM_PATCH_SIZE = 144\n",
     "SCALE_Y = 2\n",
     "MODEL_ARCH = RCAN_Y\n",
-    "N_CHANNELS = 1\n",
-    "N_RES_BLOCKS = 16\n",
-    "N_FEATS = 64\n",
     "MODEL_PATH = Path.home() / '.data' / 'y_rcan_best_model.pth'\n",
     "RANDOM_CROP = False\n",
     "\n",
@@ -366,8 +363,7 @@
     "lr_y_chw = np.transpose(lr_y_hwc, (2, 0, 1))\n",
     "lr_tensor = torch.from_numpy(lr_y_chw).unsqueeze(0).float().to(device)\n",
     "\n",
-    "model_vis = MODEL_ARCH(num_channels=N_CHANNELS,\n",
-    "                       num_res_blocks=N_RES_BLOCKS, n_feats=N_FEATS).to(device)\n",
+    "model_vis = MODEL_ARCH().to(device)\n",
     "\n",
     "try:\n",
     "    weights = torch.load(MODEL_PATH, map_location=device)\n",
