--- a/DL_algos/y_ressr.ipynb
+++ b/DL_algos/y_ressr.ipynb
@@ -65,7 +65,7 @@
     "DATA_DIR = Path.home() / '.data'\n",
     "TRAIN_DIR = Path.home() / '.data' / 'UCMerced_LandUse_Split' / 'train'\n",
     "VAL_DIR = Path.home() / '.data' / 'UCMerced_LandUse_Split' / 'val'\n",
-    "MODEL_DIR = Path.home() / '.data' / 'fsrcnn_models'\n",
+    "MODEL_DIR = Path.home() / '.data' / 'models'\n",
     "MODEL_DIR.mkdir(parents=True, exist_ok=True)\n"
    ],
    "id": "4ae429a2f8440780",
@@ -141,11 +141,11 @@
     "\n",
     "    if avg_val_psnr > best_psnr:\n",
     "        best_psnr = avg_val_psnr\n",
-    "        torch.save(model.state_dict(), DATA_DIR / 'y_ResSR_Y_best_model.pth')\n",
+    "        torch.save(model.state_dict(), MODEL_DIR / 'y_ResSR_best_model.pth')\n",
     "        print(f\"  [!] New Best PSNR: {best_psnr:.2f} dB saved.\")\n",
     "\n",
     "    if epoch % 20 == 0:\n",
-    "         torch.save(model.state_dict(), MODEL_DIR / f'y_ResSR_Y_checkpoint_{epoch}.pth')\n",
+    "         torch.save(model.state_dict(), MODEL_DIR / f'y_ResSR_checkpoint_{epoch}.pth')\n",
     "\n",
     "print(\"training complete.\")\n"
    ],
