--- a/metrics.ipynb
+++ b/metrics.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-17T09:50:15.673461Z",
-     "start_time": "2025-12-17T09:50:11.857486Z"
+     "end_time": "2025-12-17T11:14:29.154851Z",
+     "start_time": "2025-12-17T11:14:27.906312Z"
     }
    },
    "source": [
@@ -30,13 +30,13 @@
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-17T09:50:17.425840Z",
-     "start_time": "2025-12-17T09:50:17.422646Z"
+     "end_time": "2025-12-17T11:14:30.306194Z",
+     "start_time": "2025-12-17T11:14:30.302559Z"
     }
    },
    "cell_type": "code",
@@ -49,13 +49,13 @@
    ],
    "id": "48bc2dc481601604",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-17T09:50:19.181160Z",
-     "start_time": "2025-12-17T09:50:19.176944Z"
+     "end_time": "2025-12-17T11:14:31.055753Z",
+     "start_time": "2025-12-17T11:14:31.051281Z"
     }
    },
    "cell_type": "code",
@@ -80,13 +80,13 @@
    ],
    "id": "1034bf8fbefadaf3",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-17T10:12:02.900317Z",
-     "start_time": "2025-12-17T10:12:02.888174Z"
+     "end_time": "2025-12-17T11:27:42.695115Z",
+     "start_time": "2025-12-17T11:27:42.688367Z"
     }
    },
    "cell_type": "code",
@@ -109,43 +109,53 @@
     "            return np.clip(sr_rgb, 0, 1)\n",
     "\n",
     "        elif mode == 'y':\n",
-    "            lr_uint8 = (np.clip(lr_rgb, 0, 1) * 255).astype(np.uint8)\n",
-    "            ycbcr = rgb2ycbcr(lr_uint8)\n",
-    "            lr_y = ycbcr[:, :, 0].astype(np.float32) / 255.0\n",
-    "            lr_cb = ycbcr[:, :, 1]\n",
-    "            lr_cr = ycbcr[:, :, 2]\n",
+    "            # --- 1. Получаем предсказание Y от нейросети ---\n",
+    "            # Конвертируем вход в YCbCr\n",
+    "            # rgb2ycbcr(float) -> возвращает Y в диапазоне [16..235], тип float\n",
+    "            ycbcr = rgb2ycbcr(lr_rgb)\n",
     "\n",
-    "            # (1, 1, H, W)\n",
+    "            # Нормализуем Y к [0, 1] для подачи в сеть (как при обучении)\n",
+    "            lr_y = ycbcr[:, :, 0] / 255.0\n",
+    "\n",
     "            lr_y_tensor = torch.from_numpy(lr_y).unsqueeze(0).unsqueeze(0).float().to(device)\n",
     "            sr_y_tensor = model(lr_y_tensor)\n",
-    "            sr_y = sr_y_tensor.squeeze().squeeze().cpu().numpy() # (H_new, W_new)\n",
     "\n",
-    "            # add colors with bicubic\n",
-    "            lr_cb_exp = lr_cb[:, :, np.newaxis]\n",
-    "            lr_cr_exp = lr_cr[:, :, np.newaxis]\n",
-    "\n",
-    "            sr_cb = SR_bicubic(lr_cb_exp, target_h, target_w, preserve_range=True, output_dtype=np.float32)\n",
-    "            sr_cr = SR_bicubic(lr_cr_exp, target_h, target_w, preserve_range=True, output_dtype=np.float32)\n",
-    "\n",
-    "            sr_cb = sr_cb[:, :, 0]\n",
-    "            sr_cr = sr_cr[:, :, 0]\n",
-    "\n",
+    "            # Получаем выход [0, 1] и возвращаем к масштабу [16..235]\n",
+    "            sr_y = sr_y_tensor.squeeze().squeeze().cpu().numpy()\n",
     "            sr_y = sr_y * 255.0\n",
+    "\n",
+    "            # --- 2. Получаем каналы Cb и Cr через обычный Бикубик ---\n",
+    "            # Мы просто апскейлим всю RGB картинку, так как SR_bicubic точно работает корректно с RGB\n",
+    "            sr_bicubic_rgb = SR_bicubic(lr_rgb, target_h, target_w, preserve_range=True, output_dtype=np.float32)\n",
+    "\n",
+    "            # Переводим интерполированный RGB в YCbCr\n",
+    "            sr_bicubic_ycbcr = rgb2ycbcr(sr_bicubic_rgb)\n",
+    "\n",
+    "            # Берем Cb и Cr от бикубика. Они уже правильного размера и масштаба.\n",
+    "            sr_cb = sr_bicubic_ycbcr[:, :, 1]\n",
+    "            sr_cr = sr_bicubic_ycbcr[:, :, 2]\n",
+    "\n",
+    "            # --- 3. Подменяем Y канал и собираем ---\n",
+    "            # Проверка размеров на всякий случай (иногда бывают ошибки округления на 1 пиксель)\n",
+    "            # Если размеры не совпадают, подрежем под Y (основной контент)\n",
+    "            h_y, w_y = sr_y.shape\n",
+    "            sr_cb = sr_cb[:h_y, :w_y]\n",
+    "            sr_cr = sr_cr[:h_y, :w_y]\n",
     "\n",
     "            sr_ycbcr = np.stack([sr_y, sr_cb, sr_cr], axis=2)\n",
     "            sr_rgb = ycbcr2rgb(sr_ycbcr)\n",
     "\n",
-    "            return np.clip(sr_rgb, 0, 1)"
+    "            return np.clip(sr_rgb, 0, 1)\n"
    ],
    "id": "d7aba994ce68ce4e",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-17T09:50:24.480140Z",
-     "start_time": "2025-12-17T09:50:23.654786Z"
+     "end_time": "2025-12-17T11:21:58.981232Z",
+     "start_time": "2025-12-17T11:21:58.713316Z"
     }
    },
    "cell_type": "code",
@@ -174,13 +184,13 @@
    ],
    "id": "ad72e918ac06b256",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-17T10:18:49.702526Z",
-     "start_time": "2025-12-17T10:18:17.714224Z"
+     "end_time": "2025-12-17T11:28:11.467796Z",
+     "start_time": "2025-12-17T11:27:44.614362Z"
     }
    },
    "cell_type": "code",
@@ -264,26 +274,26 @@
       "  dataset = DatasetReader(path, driver=driver, sharing=sharing, **kwargs)\n",
       "/mnt/c/Users/nicol/OneDrive/work/super-resolution/classic_algos/lanczos.py:4: RuntimeWarning: invalid value encountered in divide\n",
       "  return np.where(x == 0, 1.0, np.sin(np.pi * x) / (np.pi * x))\n",
-      "100%|██████████| 210/210 [00:31<00:00,  6.57it/s]"
+      "100%|██████████| 210/210 [00:26<00:00,  7.82it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                 File     Method       PSNR      SSIM     ERGAS    Time_ms  \\\n",
-      "0  agricultural42.tif    Bicubic  37.351933  0.963715  1.348210  14.059264   \n",
-      "1  agricultural42.tif    Lanczos  37.697346  0.967239  1.299914  13.651941   \n",
-      "2  agricultural42.tif   y_fsrcnn  36.808662  0.959945  1.425582  23.009431   \n",
-      "3  agricultural42.tif    y_ressr  38.364960  0.970497  1.207859  77.065407   \n",
-      "4  agricultural42.tif  rgb_ressr  38.314854  0.970332  1.218050  93.717263   \n",
+      "                 File     Method       PSNR      SSIM     ERGAS     Time_ms  \\\n",
+      "0  agricultural42.tif    Bicubic  37.437710  0.963957  1.348210   13.285537   \n",
+      "1  agricultural42.tif    Lanczos  37.793297  0.967473  1.299914   14.981957   \n",
+      "2  agricultural42.tif   y_fsrcnn  36.998672  0.960414  1.425582   21.079180   \n",
+      "3  agricultural42.tif    y_ressr  38.478462  0.970782  1.207859   98.582398   \n",
+      "4  agricultural42.tif  rgb_ressr  38.428818  0.970605  1.218050  140.808570   \n",
       "\n",
       "         FPS  \n",
-      "0  71.127478  \n",
-      "1  73.249657  \n",
-      "2  43.460440  \n",
-      "3  12.975991  \n",
-      "4  10.670393  \n"
+      "0  75.269821  \n",
+      "1  66.746954  \n",
+      "2  47.440175  \n",
+      "3  10.143799  \n",
+      "4   7.101840  \n"
      ]
     },
     {
@@ -294,54 +304,54 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-17T10:03:35.784787Z",
-     "start_time": "2025-12-17T10:03:35.776401Z"
+     "end_time": "2025-12-17T11:28:50.508173Z",
+     "start_time": "2025-12-17T11:28:50.495771Z"
     }
    },
    "cell_type": "code",
-   "source": "print(df)",
+   "source": [
+    "summary_df = df.groupby('Method').agg({\n",
+    "    'PSNR': ['mean', 'std'],\n",
+    "    'SSIM': ['mean', 'std'],\n",
+    "    'ERGAS': ['mean'],\n",
+    "    'Time_ms': ['mean'],\n",
+    "    'FPS': ['mean']\n",
+    "}).round(4)\n",
+    "print(summary_df)"
+   ],
    "id": "da54f25e59c4c507",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                         File     Method       PSNR      SSIM      ERGAS  \\\n",
-      "0          agricultural42.tif    Bicubic -10.778872  0.948717   1.348210   \n",
-      "1          agricultural42.tif    Lanczos -10.433456  0.953994   1.299914   \n",
-      "2          agricultural42.tif   y_fsrcnn -43.151047  0.000002  50.414881   \n",
-      "3          agricultural42.tif    y_ressr -43.151047  0.000002  50.414881   \n",
-      "4          agricultural42.tif  rgb_ressr  -9.815949  0.957222   1.218050   \n",
-      "...                       ...        ...        ...       ...        ...   \n",
-      "1465  sparseresidential38.tif   y_fsrcnn -40.966789  0.000048  51.970500   \n",
-      "1466  sparseresidential38.tif    y_ressr -40.966789  0.000048  51.970500   \n",
-      "1467  sparseresidential38.tif  rgb_ressr -18.775761  0.720565   4.122629   \n",
-      "1468  sparseresidential38.tif     y_rcan -40.966789  0.000048  51.970500   \n",
-      "1469  sparseresidential38.tif   rgb_rcan -18.741323  0.720620   4.105002   \n",
-      "\n",
-      "        Time_ms         FPS  \n",
-      "0     12.522886   79.853797  \n",
-      "1      9.413458  106.230887  \n",
-      "2     15.115337   66.157969  \n",
-      "3     42.762730   23.384849  \n",
-      "4     38.426615   26.023630  \n",
-      "...         ...         ...  \n",
-      "1465   5.389042  185.561735  \n",
-      "1466  11.217896   89.143275  \n",
-      "1467   7.863190  127.174847  \n",
-      "1468  17.298365   57.808931  \n",
-      "1469  13.054906   76.599555  \n",
-      "\n",
-      "[1470 rows x 7 columns]\n"
+      "                PSNR            SSIM           ERGAS  Time_ms       FPS\n",
+      "                mean     std    mean     std    mean     mean      mean\n",
+      "Method                                                                 \n",
+      "Bicubic    31.930300  5.7136  0.8991  0.0719  4.0396   5.1581  197.5189\n",
+      "Lanczos    32.009499  5.8919  0.8971  0.0764  4.0596  11.2325   89.9506\n",
+      "rgb_rcan   32.947399  5.6816  0.9115  0.0648  3.6407  14.9819   68.7333\n",
+      "rgb_ressr  32.850399  5.6990  0.9099  0.0672  3.6824   8.8153  122.9658\n",
+      "y_fsrcnn   31.813801  5.5740  0.8960  0.0728  4.0879  12.9035   78.3352\n",
+      "y_rcan     32.893700  5.6885  0.9104  0.0665  3.6680  20.3129   49.8528\n",
+      "y_ressr    32.786598  5.7015  0.9090  0.0680  3.7106  14.4445   71.3733\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 20
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "8fa989deae2e74a7"
   }
  ],
  "metadata": {
